k8s/infra/tekton/pipelines/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authentik-ak-outpost-authentik-embedded-outpost@kubernetescrd
  name: tekton-dashboard-ingress
spec:
  tls:
    - hosts:
        - tekton.s.h-a.cc
      secretName: tekton-dashboard-tls
  rules:
    - host: tekton.s.h-a.cc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
